//package wanyou.game.protocol;
//иб╦═¤ч¤б

message BceDead {
}
